Fix alignment on 404 image

--- a/static/css/perdiem.css
+++ b/static/css/perdiem.css
@@ -122,7 +122,7 @@ h1.privacy-title {
     color: #000;
 }
 
-img.404 {
+img.img-404 {
     display: block;
     margin-left: auto;
     margin-right: auto;
